Updated JVM arguments to address native libraries warning for JavaFX